<resources>
    <string name="app_name">Recipe Keeper</string>
    <string name="add_new_recipe">Add New Recipe</string>
    <string name="ingredient">ingredient</string>
    <string name="add_another">ADD ANOTHER ING.</string>
    <string name="enter_details">Enter details</string>
    <string name="detail_instructions_and_notes">Detail instructions and notes</string>
    <string name="done_save">Done / Save</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="cancel">Cancel</string>
    <string name="category_or_folder">Category or Folder</string>
    <string name="main_folder">Main Folder</string>
    <string name="info_message">Thank you for downloading recipe keeper!\nI would love to hear your thoughts and about\nfeatures you would like to see!</string>
    <string-array name="value_measurements">
        <item>--</item>
        <item>tsp</item>
        <item>tbsp</item>
        <item>floz</item>
        <item>cup</item>
        <item>pnt</item>
        <item>qrt</item>
        <item>gm</item>
        <item>oz</item>
        <item>lbs</item>
    </string-array>
    <string-array name="volume">
        <item>--</item>
        <item>1/4</item>
        <item>1/3</item>
        <item>1/2</item>
        <item>2/3</item>
        <item>3/4</item>
        <item>1</item>
        <item>1-1/4</item>
        <item>1-1/3</item>
        <item>1-1/2</item>
        <item>1-2/3</item>
        <item>1-3/4</item>
        <item>2</item>
        <item>2-1/4</item>
        <item>2-1/3</item>
        <item>2-1/2</item>
        <item>2-2/3</item>
        <item>2-3/4</item>
        <item>3</item>
        <item>3-1/4</item>
        <item>3-1/3</item>
        <item>3-1/2</item>
        <item>3-2/3</item>
        <item>3-3/4</item>
        <item>4</item>
        <item>4-1/4</item>
        <item>4-1/3</item>
        <item>4-1/2</item>
        <item>4-2/3</item>
        <item>4-3/4</item>
    </string-array>
    <string-array name="recipe_view_spinner">
        <item>original recipe</item>
        <item>Half recipe</item>
        <item>1.5 times recipe</item>
        <item>Double recipe</item>
    </string-array>
    <string name="file_name">recipe_list.json</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="feedback">Feedback</string>
    <string name="ad_block_message">At this time I am supporting this app with ads. I\nam considering making a \"remove ads\" option in the\nfuture. I would like to hear from users to find out\nhow much demand there is for such a feature.\nPlease hit that feedback button to let me know\nwhether you would like to see this option in\nthe future.\nThanks in advance!</string>
    <string name="please_click_the_feedback_button_to_let_me_know_nhow_i_m_doing_and_make_suggestions">Please click the feedback button to let me know\nhow I\'m doing and make suggestions.</string>
    <string name="title_activity_recipe_viewer">RecipeViewer</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Close</string>
    <string name="start">Start</string>
    <string name="add_timer">add timer</string>
    <string name="calculate">Calculate</string>
    <string name="new_measurement">New Measurement</string>
    <string name="result">Result</string>
    <string name="please_select_original_measurement">Please select original measurement</string>
</resources>
