<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="keeper.recipe.recipekeeper.AddNewRecipe">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_AddNew"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="#303030"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/adView_AddNew"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddNewDetailBlock"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/CatagoryEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890.,/- "
        android:ems="10"
        android:hint="@string/category_or_folder"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddRecipeName" />

    <EditText
        android:id="@+id/AddNewDetailBlock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="#303030"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/enter_details"
        android:inputType="textMultiLine"
        android:nestedScrollingEnabled="false"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890/. "
        app:layout_constraintBottom_toTopOf="@+id/AddRecipeButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/AddNewDetailInfo"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="#303030"
        android:elevation="5dp"
        android:text="@string/detail_instructions_and_notes"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/AddNewDetailBlock"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/AddRecipeButton"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:elevation="8dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/done_save"
        app:layout_constraintBottom_toTopOf="@+id/adView_AddNew"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/AddRecipeCancelButton"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="8dp"
        android:text="@string/cancel"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/adView_AddNew"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/AddRecipeButton"
        app:layout_constraintTop_toBottomOf="@+id/AddNewDetailBlock"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/AddIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add_another"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/AddRecipeName"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/AddRecipeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 "
        android:ems="10"
        android:hint="@string/recipe_name"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/AddNewDetailInfo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CatagoryEditText">

        <LinearLayout
            android:id="@+id/AddRecipeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/AddNewDetailInfo"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AddIngredient"
            app:layout_constraintVertical_bias="1.0">

            <ListView
                android:id="@+id/AddRecipeLayoutListview"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:smoothScrollbar="true" />
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
