<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:visibility="visible">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#444444"
        android:visibility="visible">

        <TextView
            android:id="@+id/timer_display"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/common_google_signin_btn_text_light_disabled"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/timer_minutes"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:spinnerMode="dialog"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer_display"
            android:layout_marginEnd="8dp" />

        <Spinner
            android:id="@+id/timer_hours"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:spinnerMode="dialog"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer_display"
            android:layout_marginStart="8dp" />

        <Button
            android:id="@+id/timer_popup_cancel"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#6b2828"
            android:text="@string/cancel"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer_hours"
            android:layout_marginStart="8dp" />

        <Button
            android:id="@+id/close_popup"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/close"
            android:textSize="14sp"
            app:layout_constraintRight_toLeftOf="@+id/timer_popup_start"
            app:layout_constraintTop_toBottomOf="@+id/timer_minutes"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/timer_popup_add_timer"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/add_timer"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@+id/timer_popup_cancel"
            app:layout_constraintTop_toBottomOf="@+id/timer_hours" />

        <Button
            android:id="@+id/timer_popup_start"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#27481f"
            android:text="@string/start"
            android:textSize="14sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer_minutes" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>